# div

./: .gitignore  README.md
esp32/: notes.md
pico/: .gitignore  01_demoDispTherm.py  02_demoDispText.py  03_calcPi.py  notes.md  pimoroni-pico-micropython.uf2
pico/cpp/: .gitignore
pico/cpp/helperFunctions/: convertImage.py
pico/cpp/hid_printA/: CMakeLists.txt  prepareNmake.bat
pico/cpp/hid_printA/usb/: CMakeLists.txt  background.hpp  hid_printA.c  hid_printA.cpp  icons.hpp  usb_descriptors.cpp
pico/cpp/hid_printA/usb/device/: CMakeLists.txt
pico/cpp/pico-examples/: CMakeLists.txt
pico/helperFunctions/: .gitignore  animation_coordinates.txt  convertImage.py
pico/hid_printA/: .gitignore  CMakeLists.txt  prepareNmake.bat
pico/hid_printA/usb/: CMakeLists.txt  hid_printA.cpp  imgdata.hpp
pico/usbHid/: adafruit-circuitpython-raspberry_pi_pico-en_US-6.2.0-beta.4.uf2  code.py  hid_example.py  notes.md
pico/widaktiv/: .gitignore  CMakeLists.txt  copyUf2file.bat  prepareNmake.bat  prepareNmake.ps1  prepareNmake.py  widaktiv.uf2  widaktivHeadless.uf2
pico/widaktiv/usb/: CMakeLists.txt  imgdata.hpp  widaktiv.cpp
pico/wireless/RX/: notes.md  pico_w.sql  wmeter.sql  wmeter_user.sql
pico/wireless/TX/: main_display.py  main_measure.py  my_functions.py
pico/wireless/__old/: chartTrial_line.htm  chartTrial_time.htm
pico/wireless/__old_trial_unused/: CommLog_raw.txt  chartTrial_time.htm  dataDump.ods  getRX.php  main.oldWithValueLogic.py
tagesjournal/: ClaudePrompt.txt  Prompt.md  notes.md
tagesjournal/Eintrag/: .gitignore  local.properties  settings.gradle.kts
tagesjournal/SecureNotes/: README.md  settings.gradle.kts
widmedia/html/: index.html  robots.txt
(+261 files in other folders)
